app/src/main/java/nativeandroid/tremolo/jnaerated/tremoloLibrary.java

package nativeandroid.tremolo.jnaerated;

import nativeandroid.stdio.jnaerated.FILE;

import org.bridj.BridJ;
import org.bridj.Pointer;
import org.bridj.ann.CLong;
import org.bridj.ann.Library;
import org.bridj.ann.Runtime;
import org.bridj.cpp.CPPRuntime;
/**
 * Wrapper for library <b>nativeandroid.tremolo.jnarated</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.free.fr/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library("vorbisidec") 
@Runtime(CPPRuntime.class) 
public class tremoloLibrary {
	static {
		BridJ.register();
	}

	public static native void oggpack_readinit(Pointer<oggpack_buffer > b, Pointer<ogg_reference > r);

	public static final int OV_ENOTVORBIS = (int)-132;
	public static final int OV_EFAULT = (int)-129;
	public static final int OV_ENOSEEK = (int)-138;
	public static final int OV_ENOTAUDIO = (int)-135;
	public static final int OV_EBADLINK = (int)-137;
	public static final int OV_EINVAL = (int)-131;
	public static final int OV_EOF = (int)-2;
	public static final int OV_EIMPL = (int)-130;
	public static final int OV_HOLE = (int)-3;
	public static final int OV_EVERSION = (int)-134;
	public static final int OV_EREAD = (int)-128;
	public static final int OV_EBADHEADER = (int)-133;
	public static final int OV_FALSE = (int)-1;
	public static final int OV_EBADPACKET = (int)-136;
	public static native void vorbis_info_init(Pointer<vorbis_info > vi);
	public static native void vorbis_info_clear(Pointer<vorbis_info > vi);
	public static native int vorbis_info_blocksize(Pointer<vorbis_info > vi, int zo);
	public static native void vorbis_comment_init(Pointer<vorbis_comment > vc);
	public static native void vorbis_comment_add(Pointer<vorbis_comment > vc, Pointer<Byte > comment);
	public static native void vorbis_comment_add_tag(Pointer<vorbis_comment > vc, Pointer<Byte > tag, Pointer<Byte > contents);
	public static native Pointer<Byte > vorbis_comment_query(Pointer<vorbis_comment > vc, Pointer<Byte > tag, int count);
	public static native int vorbis_comment_query_count(Pointer<vorbis_comment > vc, Pointer<Byte > tag);
	public static native void vorbis_comment_clear(Pointer<vorbis_comment > vc);

	public static native int ov_clear(Pointer<OggVorbis_File > vf);
	public static native int ov_open(Pointer<FILE > f, Pointer<OggVorbis_File > vf, Pointer<Byte > initial, @CLong long ibytes);
	public static native int ov_open_callbacks(Pointer<? > datasource, Pointer<OggVorbis_File > vf, Pointer<Byte > initial, @CLong long ibytes, ov_callbacks callbacks);
	public static native int ov_test(Pointer<FILE > f, Pointer<OggVorbis_File > vf, Pointer<Byte > initial, @CLong long ibytes);
	public static native int ov_test_callbacks(Pointer<? > datasource, Pointer<OggVorbis_File > vf, Pointer<Byte > initial, @CLong long ibytes, ov_callbacks callbacks);
	public static native int ov_test_open(Pointer<OggVorbis_File > vf);
	public static native long ov_bitrate(Pointer<OggVorbis_File > vf, int i);
	public static native long ov_bitrate_instant(Pointer<OggVorbis_File > vf);
	public static native long ov_streams(Pointer<OggVorbis_File > vf);
	public static native long ov_seekable(Pointer<OggVorbis_File > vf);
	public static native long ov_serialnumber(Pointer<OggVorbis_File > vf, int i);
	public static native long ov_raw_total(Pointer<OggVorbis_File > vf, int i);
	public static native long ov_pcm_total(Pointer<OggVorbis_File > vf, int i);
	public static native int ov_time_total(Pointer<OggVorbis_File > vf, int i); // FIXME: HTC Desire expects int retval here.
	public static native int ov_raw_seek(Pointer<OggVorbis_File > vf, long pos);
	public static native int ov_pcm_seek(Pointer<OggVorbis_File > vf, long pos);
	public static native int ov_pcm_seek_page(Pointer<OggVorbis_File > vf, long pos);
	public static native int ov_time_seek(Pointer<OggVorbis_File > vf, long pos);
	public static native int ov_time_seek_page(Pointer<OggVorbis_File > vf, long pos);
	public static native long ov_raw_tell(Pointer<OggVorbis_File > vf);
	public static native long ov_pcm_tell(Pointer<OggVorbis_File > vf);
	public static native long ov_time_tell(Pointer<OggVorbis_File > vf);
	public static native Pointer<vorbis_info > ov_info(Pointer<OggVorbis_File > vf, int link);
	public static native Pointer<vorbis_comment > ov_comment(Pointer<OggVorbis_File > vf, int link);
	public static native int ov_read(Pointer<OggVorbis_File > vf, Pointer<? > buffer, int length, Pointer<Integer > bitstream); // FIXME: HTC Desire expects int retval here.

	/// Undefined type
	public static interface vorbis_dsp_state {
		
	};
}
